# dataquality

./: .coveragerc  .flake8  .gitbook.yaml  .gitignore  .pre-commit-config.yaml  .test_durations  CONTRIBUTING.md  Dataquality unlabaled data no model.ipynb  Drift-Demo.ipynb  Galileo <3 SKlearn.ipynb  Involve_debugging.py  LICENSE  Makefile  README.md  Untitled.ipynb  auto_CV.py  cli.py  dqstart.py  mkdocs.yml  pyproject.toml  pyproject_gpu.md  pytest.ini  runit.py  setup.cfg  spectrum_keras_integration.py  tasks.py  to_api_explainatron_hackathon.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: docs.yaml  integration_test.yaml  pre-commit.yaml  publish-cuda12.yaml  publish-docs.yaml  publish.yaml  stale.yaml  test.yaml
dataquality/: __init__.py  analytics.py  auth.py  checks.py  config.py  dq-cli.py  dq-yolo.py  dqyolo.py  exceptions.py  finish.py  init.py  internal.py  log.py  metrics.py  notebook.py  view.py
dataquality/auto/: auto.py  base_data_manager.py  ner.py  ner_trainer.py  tc_trainer.py  text_classification.py
dataquality/clients/: __init__.py  api.py  api_client.py  http_client.py  keras.py  objectstore.py  pytorch.py  tensorflow.py
dataquality/core/: __init__.py  _config.py  auth.py  config.py  finish.py  init.py  log.py  predicate.py  report.py
dataquality/dq_auto/: auto.py  base_data_manager.py  ic_trainer.py  image_classification.py  ner.py  ner_trainer.py  notebook.py  schema.py  tc_trainer.py  text_classification.py
dataquality/dq_start/: __init__.py
dataquality/integrations/: fastai.py  hf.py  jsl.py  keras.py  lightning.py  setfit.py  spacy.py  torch.py  torch_hook.py  torch_semantic_segmentation.py  trainer_callback.py  transformers2.py  transformers_legacy.py  transformers_trainer.py  ultralytics.py
dataquality/loggers/: __init__.py  base_logger.py  jsonl_logger.py
dataquality/schemas/: __init__.py  actions.py  condition.py  config.py  cv.py  dataframe.py  edit.py  hf.py  job.py  jsonl_logger.py  metrics.py  ml.py  model.py  ner.py  ner_errors.py  notifier.py  pipeline.py  predicate.py  report.py  request_type.py  route.py  sdk_config.py  semantic_segmentation.py  seq2seq.py  split.py  storage.py  task_type.py  torch.py
dataquality/utils/: __init__.py  ampli.py  arrow.py  auth.py  auto.py  auto_trainer.py  cleanup.py  cloud.py  constants.py  cuda.py  cv.py  cv_smart_features.py  dq_logger.py  dqyolo.py  emb.py  fastai.py  file.py  hdf5_store.py  helpers.py  hf_datasets.py  hf_images.py  hf_tokenizer.py  imports.py  jsl.py  keras.py  log_manager.py  logger.py  ml.py  name.py  od.py  patcher.py  predicate_manager.py  profiler.py  semantic_segmentation.py  seq2seq.py  setfit.py  spacy_integration.py  std_logger.py  stdout_logger.py  task_helpers.py  (+11 more)
docs/: CBO Graph Exploration.ipynb  Dataquality Client Demo.ipynb  Dataquality-Client-Demo.ipynb  End to End runs per task type-test.ipynb  End to End runs per task type.ipynb  Inference-Demo.ipynb  NER Inference.ipynb  SUMMARY.md  Structured-Data.ipynb  Untitled.ipynb  _index.rst  api.md  api.rst  api_md.md  api_rst.rst  conf.py  fastai_playground.ipynb  features.md  galileo.md  glossary.rst  help.md  index.md  partners.rst  release-notes.md  release_notes.rst  requirements.txt  test IT locally.ipynb
docs/api/: dataquality.md  dataquality.rst  index.md  index_.rst  intro.md
docs/autodocs/: Readme.md  index.rst  requirements.txt
docs/cv/: README.md  coco.ipynb  coco_deeplab_hooks.ipynb  coco_hf_dataset.py  coco_hf_datasets.py  cv-demo-dog-food.py  cv-demo-fb.py  cv-demo-hf.py  cv-demo-pytorch.py  cv-demo.py  cv-testing-benchmark.py  cv-thumbnails.py  eczema_dataset.py
docs/install/: index.md  index.rst
docs/notebooks/: Bogdan_LLM_Fine_Tuning_T5_DQ.ipynb  Dataquality-Client-Demo.ipynb  End to End runs per task type.ipynb  Inference-Demo.ipynb  NER Inference.ipynb  Seq2Seq-Auto-Chat.ipynb  Seq2Seq-Auto.ipynb  Seq2Seq_API_Logging_Flow.ipynb  Seq2Seq_Decoder_Only_Dq_Fake_Data.ipynb  Seq2Seq_Dq_Fake_Data.ipynb  Seq2Seq_Encoder_Decoder_Dq_Fake_Data.ipynb  Tabular-Data.ipynb
docs/source/: conf.py  dataquality.clients.rst  dataquality.core.rst  dataquality.dq_auto.rst  dataquality.dq_start.rst  dataquality.integrations.rst  dataquality.integrations.seq2seq.formatters.rst  dataquality.integrations.seq2seq.rst  dataquality.loggers.data_logger.rst  dataquality.loggers.data_logger.seq2seq.rst  dataquality.loggers.logger_config.rst  dataquality.loggers.logger_config.seq2seq.rst  dataquality.loggers.model_logger.rst  dataquality.loggers.model_logger.seq2seq.rst  dataquality.loggers.rst  dataquality.rst  dataquality.schemas.rst  dataquality.utils.rst  dataquality.utils.semantic_segmentation.rst  dataquality.utils.seq2seq.rst  index.rst  modules.rst
docs/use/: client.rst  index.rst  node.rst  server.rst
docs_src/: intro.py
galileo_python/: __init__.py  auth.py  config.py  log.py  logger.py  main.py
galileo_python/clients/: keras.py  pytorch.py  pytorch_lightning.py
galileo_python/loggers/: __init__.py
galileo_python/ml_clients/: keras.py  pytorch.py  (+2 more)
hackathon/: Untitled.ipynb  hackathon_fake_train_metrics.json  hackathon_fake_val_metrics.json  mass-and-fallacies.ipynb
scripts/: bump-version.sh  docs-build.sh  docs-serve.sh  format.sh  install.sh  lint.sh  pre-commit.sh  pretest.sh  publish.sh  run-dependencies.sh  run_integrations.py  set-local-env.sh  test.sh
source/: conf copy.py  conf.py  index.rst
tests/: conftest.py  debug_hf.py  debug_hf_datasets.py  exceptions.py  lightning_model.py  test_api.py  test_auth.py  test_autolog.py  test_checks.py  test_cloud.py  test_config.py  test_dataquality.py  test_dq_logger.py  test_explainatron_hackathon.py  test_finish.py  test_hf_integration.py  test_init.py  test_logger.py  test_metrics.py  test_multi_label.py  test_name.py  test_ner.py  test_predicates.py  test_spacy_integration.py  test_spacy_ner.py  test_std_logging.py  test_telemetrics.py  test_text_classification.py  test_text_classification_hf.py  test_text_classification_pt.py  test_vaex_utils.py  test_version.py
(+361 files in other folders)
